Fixes for AJAX/JS stuff in Konqueror: - Fix collapsible fieldsets (broken since to 'IE5 icons alignment' fix) - Fix JS upload (broken due to mysterious form submission abortion bug)
Thanks Bèr for letting me use VNC :).

--- a/misc/drupal.css
+++ b/misc/drupal.css
@@ -619,10 +619,13 @@ html.js fieldset.collapsed legend * {
 }
 html.js fieldset.collapsible legend a {
   padding-left: 15px;
-  display: block;
   background: url('menu-expanded.png') 5px 50% no-repeat;
 }
 html.js fieldset.collapsed legend a {
   background-image: url('menu-collapsed.png');
+}
+// Note: IE-only fix due to '* html' (breaks Konqueror otherwise).
+* html.js fieldset.collapsible legend a {
+  display: block;
 }
 
